apps/hello-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
spec:
  selector:
    app: hello-k8s
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
